--- a/JiraClient/index.html
+++ b/JiraClient/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/board.css">
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/knockout/dist/knockout.js"></script>
-
 
 
     <title>Jira</title>
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#" ></a>
+                <a class="nav-link disabled" href="#"></a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -43,12 +43,54 @@
 </nav>
 
 
-<div data-bind="treeView:{title:'Some Title',selected:selectedNodes, data:data}">
+<div class="column-tree-view treeview" data-bind="treeView:{title:'To Do', data:data}">
 </div>
-<h4>Selected Nodes</h4>
-<ul data-bind="foreach: selectedNodes">
-    <li data-bind="text: $data"></li>
-</ul>
+
+<h4>Selected Node:</h4>
+<div data-bind="if: showSelectedNode">
+    <div class="row">
+        <div class="col">
+            Name:
+        </div>
+        <div class="col"> <span data-bind="text: selectedNode.name"></span></div>
+    </div>
+    <div class="row">
+        <div class="col">
+            Description:
+        </div>
+        <div class="col" data-bind="text: selectedNode.description">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            Status:
+        </div>
+        <div class="col" data-bind="text: selectedNode.status">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            User ID:
+        </div>
+        <div class="col" data-bind="text: selectedNode.user_id">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            Column ID:
+        </div>
+        <div class="col" data-bind="text: selectedNode.column_id">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            Parent ID:
+        </div>
+        <div class="col" data-bind="text: selectedNode.parent_id">
+        </div>
+    </div>
+</div>
+
 <script src="js/constants.js"></script>
 <script src="js/services/taskService.js"></script>
 <script src="js/homeViewModel.js"></script>
