--- a/JiraClient/js/board/taskDetail-template.html
+++ b/JiraClient/js/board/taskDetail-template.html
@@ -1,41 +1,41 @@
 <h4>Selected Node:</h4>
 <div data-bind="with: selectedNode">
     <div class="row">
-        <div class="col">
+        <div class="col-md-2">
             Name:
         </div>
         <div class="col"><span data-bind="text: name"></span></div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-md-2">
             Description:
         </div>
         <div class="col" data-bind="text: description">
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-md-2">
             Status:
         </div>
         <div class="col" data-bind="text: status">
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-md-2">
             User ID:
         </div>
         <div class="col" data-bind="text: user_id ? user_id : 'null'">
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-md-2">
             Column ID:
         </div>
         <div class="col" data-bind="text: column_id">
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-md-2">
             Parent ID:
         </div>
         <div class="col" data-bind="text: parent_id ? parent_id : 'root'">
