--- a/JiraClient/js/board/taskDetail-template.html
+++ b/JiraClient/js/board/taskDetail-template.html
@@ -1,11 +1,11 @@
-<div class="row">
-    <div class="col-md-2">
-        <h4>Selected Node:</h4>
-    </div>
-    <div class="col"><i class="glyphicon glyphicon-remove"></i></div>
-</div>
 
-<div data-bind="with: selectedNode">
+    <div class="row">
+        <div class="col-md-2">
+            <h4>Selected Node:</h4>
+        </div>
+        <div class="col"><button type="button" class="btn btn-secondary" data-bind="click: deleteTask">Delete</button></div>
+    </div>
+    <div data-bind="with: selectedNode">
     <div class="row">
         <div class="col-md-2">
             Name:
