--- a/JiraClient/js/board/taskDetail-template.html
+++ b/JiraClient/js/board/taskDetail-template.html
@@ -1,11 +1,16 @@
 
-    <div class="row">
-        <div class="col-md-2">
-            <h4>Selected Node:</h4>
-        </div>
+<div class="row">
+    <div class="col-md-2">
+        <h4>Selected Node:</h4>
+    </div>
+    <div class="col-md-2">
         <div class="col"><button type="button" class="btn btn-secondary" data-bind="click: deleteTask">Delete</button></div>
     </div>
-    <div data-bind="with: selectedNode">
+    <div class="col-md-2">
+        <div class="col"><button type="button" class="btn btn-secondary" data-bind="click: showFullPath">Full Path</button></div>
+    </div>
+</div>
+<div data-bind="with: selectedNode">
     <div class="row">
         <div class="col-md-2">
             Name:
@@ -47,4 +52,14 @@
         <div class="col" data-bind="text: parent_id ? parent_id : 'root'">
         </div>
     </div>
+
+    <div class="row" data-bind="if: $root.showFullPathName">
+        <div class="col-md-2">
+            Full path name:
+        </div>
+        <div class="col" data-bind="text: fullPath">
+        </div>
+    </div>
+
+
 </div>
